new post on ESB samples

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: nuts!
 subtitle: For the night is dark and I'd probably forget this by tomorrow
 author: chamila de alwis
 simple_search: https://www.google.com/search
-description: 
+description:
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -72,7 +72,7 @@ default_asides: [asides/recent_posts.html, asides/github.html, asides/delicious.
 # ----------------------- #
 
 # Github repositories
-github_user: chamilad
+github_user:
 github_repo_count: 0
 github_show_profile_link: true
 github_skip_forks: true
