--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 url: http://chamilad.github.io
 title: nuts!
 subtitle: Ramblings on Cloud Computing, Middleware and Beer
-author: chamila de alwis
+author: chamila
 simple_search: https://www.google.com/search
 description:
 
